--- a/css/home.css
+++ b/css/home.css
@@ -98,9 +98,8 @@
 
 .hero-img-box {
   height: 100%;
-  background-color: red;
   justify-self: center;
-  /* min-width: 100%; */
+  min-width: 100%;
   max-height: 20rem;
   overflow: hidden;
 }
@@ -109,7 +108,6 @@
   object-fit: scale-down;
   min-width: 100%;
   max-height: 100%;
-  background-color: blue;
   transition: var(--transition-e);
 }
 
