--- a/css/new.css
+++ b/css/new.css
@@ -60,8 +60,9 @@
 
 .new-img {
   position: relative;
+  height: 100%;
   min-width: 100%;
-  height: 20rem;
+  max-height: 20rem;
   border-radius: var(--br-12-small-card-item);
   overflow: hidden;
 }
